# garbagecollector

./: .dockerignore  .gitignore  .srl  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  benchmark.sh  build.rs  complete_test_suite.sh  comprehensive_test.sh  docker-compose.yml  prometheus.yml  run_cleanup_server.sh  run_enhanced_experiments.sh  run_server.sh  sample_microservice.py  test.sh  test_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: benchmark.rs  gc_benchmarks.rs
examples/: EXAMPLES.md  client_usage.rs  demo-cli.sh  persistent_storage_example.rs  server_setup.rs
migrations/: 001_initial.sql
proto/: gc_service.proto
simulation/: run_experiments.sh  run_server.sh
src/: cleanup.rs  client.rs  config.rs  dependencies.rs  error.rs  lease.rs  lib.rs  main.rs  metrics.rs  monitoring.rs  service.rs  shutdown.rs  startup.rs  storage.rs
src/cleanup/: http_handler.rs  mod.rs
src/client/: mtls_client.rs
src/metrics/: alerting.rs  interceptors.rs  mod.rs  monitoring.rs
src/recovery/: manager.rs  mod.rs
src/security/: certificates.rs  mod.rs  tls_config.rs  tls_fallback.rs
src/service/: background_tasks.rs  cleanup_loop.rs  grpc_server.rs  handlers.rs  metrics_server.rs  mod.rs  recovery_integration.rs  validation.rs  wal_sequence_test.rs
src/simulation/: mod.rs
src/storage/: file_persistent.rs  memory.rs  mod.rs  persistent.rs  postgres.rs
tests/: integration.rs  integration_test.rs  lib.rs  shutdown_integration.rs
tests/helpers/: assertions.rs  mock_server.rs  mod.rs  test_data.rs
tests/integration/: mod.rs
tests/integration/cli/: mod.rs
tests/integration/cross_backend/: consistency.rs  mod.rs
tests/integration/grpc/: auth.rs  basic.rs  cleanup.rs  concurrent.rs  mod.rs
tests/integration/security/: auth_tests.rs  comprehensive_mtls_test.rs  mod.rs
tests/integration/service/: lifecycle.rs  mod.rs  shutdown.rs
tests/integration/storage/: factory.rs  memory.rs  mod.rs  postgres.rs
