[package]
name = "distributed-gc-sidecar"
version = "0.1.0"
edition = "2021"

# Add lib section to make the crate available for integration tests
[lib]
name = "distributed_gc_sidecar"
path = "src/lib.rs"

[dependencies]
# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Database (with postgres feature enabled by default)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }

# Metrics
prometheus = "0.13"

# Tower for middleware
tower = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"

# HTTP server for mock cleanup endpoint
warp = "0.3"

# Additional utilities for testing
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"

# For integration tests
tonic = { version = "0.12", features = ["transport"] }

# Test utilities
pretty_assertions = "1.4"
serial_test = "3.0"  # For tests that need to run sequentially

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.12"

[features]
# Enable postgres by default, make it optional for builds without database
default = ["postgres"]
postgres = ["sqlx"]

[[bin]]
name = "gc-sidecar"
path = "src/main.rs"

# Integration tests
[[test]]
name = "integration"
path = "tests/integration.rs"

# Benchmarks
[[bench]]
name = "gc_benchmarks"
harness = false