[package]
name = "garbagetruck"  
version = "0.1.0"
edition = "2021"
description = "A lease-based garbage collection sidecar for distributed systems"
license = "MIT"
repository = "https://github.com/your-org/garbagecollector" 
keywords = ["grpc", "gc", "sidecar", "microservices", "lease"]
categories = ["network-programming", "development-tools"]


[lib]
name = "garbagetruck"
path = "src/lib.rs"


[dependencies]
# gRPC and protobuf
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Database (with postgres feature enabled by default)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }

# Metrics
prometheus = "0.13"

# Tower for middleware (only what we need)
tower = { version = "0.4", features = ["util"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Client-specific dependencies
fastrand = "2.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"

# HTTP server for mock cleanup endpoint
warp = "0.3"

# Additional utilities for testing
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"

# For integration tests
tonic = { version = "0.12", features = ["transport"] }

# Test utilities
pretty_assertions = "1.4"
serial_test = "3.0"  # For tests that need to run sequentially

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.12"

[features]
# Enable postgres by default, make it optional for builds without database
default = ["grpc"]
grpc = []
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls"]
client = []

# UPDATED: Binary now points to bin/main.rs
[[bin]]
name = "garbagetruck"
path = "src/bin/main.rs"


[[test]]
name = "integration"
path = "tests/integration.rs"

[[bench]]
name = "benchmark"
harness = false

# Examples
[[example]]
name = "client_usage"
path = "examples/client_usage.rs"
required-features = ["client"]