[package]
name = "garbagetruck"  
version = "0.1.0"
edition = "2021"
authors = ["Ronan Takizawa <ronantakizawa@gmail.com>"]
description = "A lease-based garbage collection sidecar for distributed systems"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ronantakizawa/garbagetruck"
repository = "https://github.com/ronantakizawa/garbagetruck" 
documentation = "https://docs.rs/garbagetruck"
keywords = ["grpc", "gc", "sidecar", "microservices", "lease"]
categories = ["network-programming", "development-tools", "command-line-utilities"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "docker/",
    "scripts/",
    "benchmarks/",
    "*.log"
]

[lib]
name = "garbagetruck"
path = "src/lib.rs"

[dependencies]
# gRPC and protobuf
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full", "macros"] }
tokio-stream = "0.1"

# HTTP client and server
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.4"

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"

# Tower for middleware
tower = { version = "0.4", features = ["util"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Client-specific dependencies
fastrand = "2.0"

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive", "env"], optional = true }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"

# Additional utilities for testing
pretty_assertions = "1.4"
serial_test = "3.0"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["client","server"]
client = ["clap"]
server = []
# Remove postgres feature entirely
full = ["client", "server"]

# Server binary
[[bin]]
name = "garbagetruck-server"
path = "src/bin/server/main.rs"
required-features = ["server"]

# CLI binary  
[[bin]]
name = "garbagetruck"
path = "src/bin/cli/main.rs"
required-features = ["client"]

# Experiment binary
[[bin]]
name = "garbagetruck-experiment"
path = "src/bin/experiment/main.rs"
required-features = ["client"]

# Cleanup server binary
[[bin]]
name = "garbagetruck-cleanup-server"
path = "src/bin/cleanup-server/main.rs"
required-features = ["client"]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "client_usage"
path = "examples/client_usage.rs"
required-features = ["client"]

[[example]]
name = "server_setup"
path = "examples/server_setup.rs"
required-features = ["server"]